# geepillow

./: .copier-answers.yml  AUTHORS.rst  CITATION.cff  CONTRIBUTING.rst  LICENSE  README.md  README.rst  noxfile.py  pyproject.toml  setup.py
.github/workflows/: pypackage_check.yaml  release.yaml  unit.yaml
docs/: conf.py  index.rst  usage.rst
docs/_template/: pypackage-credit.html
geepillow/: __init__.py  blocks.py  colors.py  eeblocks.py  eeimage.py  grids.py  helpers.py  image.py  strips.py
geepillow/fonts/: __init__.py
tests/: conftest.py  test_blocks.py  test_eeimage.py  test_grids.py  test_strips.py
