[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "geepillow"
version = "1.1.0"
description = "Download Satellite images from GEE as Pillow images and create image strips and grids"
keywords = [
  "skeleton",
  "Python"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.10"
dependencies = [
    "deprecated>=1.2.14",
    "earthengine-api",
    "pillow",
    "requests",
    "geetools"
]

[[project.authors]]
name = "Rodrigo Esteban Principe"
email = "fitoprincipe82@gmail.com"

[project.license]
text = "MIT"

[project.readme]
file = "README.rst"
content-type = "text/x-rst"

[project.urls]
Homepage = "https://github.com/fitoprincipe/geepillow"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pytest-deadfixtures",
    "pytest-regressions",
    "pytest-gee"
]
doc = [
  "sphinx>=6.2.1",
  "pydata-sphinx-theme",
  "sphinx-copybutton",
  "sphinx-design",
  "sphinx-autoapi"
]

[tool.hatch.build.targets.wheel]
only-include = ["geepillow"]

[tool.hatch.envs.default]
dependencies = [
  "pre-commit",
  "commitizen",
  "nox[uv]",
  "types-requests"
]
post-install-commands = ["pre-commit install"]

[tool.commitizen]
tag_format = "v$major.$minor.$patch$prerelease"
update_changelog_on_bump = false
version = "1.1.0"
version_files = [
    "pyproject.toml:version",
    "geepillow/__init__.py:__version__",
    "docs/conf.py:release",
    "CITATION.cff:version"
]

[tool.pytest.ini_options]
testpaths = "tests"

[tool.ruff]
line-length = 100
ignore-init-module-imports = true
fix = true

[tool.ruff.lint]
select = ["E", "F", "W", "I", "D", "RUF"]
ignore = [
  "E501",  # line too long | Black take care of it
  "D212",  # Multi-line docstring | We use D213
  "D101",  # Missing docstring in public class | We use D106
]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.coverage.run]
source = ["geepillow"]

[tool.mypy]
python_version = "3.10"
scripts_are_modules = true
ignore_missing_imports = true
install_types = true
non_interactive = true
warn_redundant_casts = true
